middleware/firefly/values/firefly-cors-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: firefly-cors
  namespace: firefly
spec:
  headers:
    accessControlAllowMethods:
      - GET
      - OPTIONS
      - PUT
      - POST
      - DELETE
      - PATCH
    accessControlAllowHeaders:
      - "*"
    accessControlAllowOriginList:
      - "*"
    accessControlMaxAge: 100
    addVaryHeader: true
